Create Shop UI ----- Insert --- Update --- Delete ---

--- a/app/src/main/res/layout/activity_product_delete.xml
+++ b/app/src/main/res/layout/activity_product_delete.xml
@@ -72,6 +72,13 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:text="Manufacturer" />
+                    <TextView
+                        android:id="@+id/textView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="Customer Id" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -95,7 +102,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:ems="10"
-                        android:hint="Name"
+                        android:hint="Price"
                         android:inputType="textPersonName" />
 
                     <EditText
@@ -104,7 +111,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:ems="10"
-                        android:hint="Address"
+                        android:hint="Type"
                         android:inputType="textPersonName" />
 
                     <EditText
@@ -113,7 +120,15 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:ems="10"
-                        android:hint="Phone Num"
+                        android:hint="Manufacturer"
+                        android:inputType="textPersonName" />
+                    <EditText
+                        android:id="@+id/et_product_delete_customer_id"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:ems="10"
+                        android:hint="Customer Id"
                         android:inputType="textPersonName" />
                 </LinearLayout>
             </LinearLayout>
