--- a/app/src/main/res/layout/activity_sale_update.xml
+++ b/app/src/main/res/layout/activity_sale_update.xml
@@ -175,7 +175,7 @@
                 android:layout_weight="0.1">
 
                 <Button
-                    android:id="@+id/btn_sale_insert"
+                    android:id="@+id/btn_sale_update"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
